scss/_custom.scss
$font-color-primary: #3D3D3D;
$font-color-scrollspy: #31343F;
$portfolio-background-color: #77FFD6;
$posts-background-color: #F8F8F8;
$contact-background-color: black;
$font-color-footer: white;

h1 {
  font-size: 4em;
  font-weight: 100;
  text-align: center;
  margin: 0;
  padding-bottom: 10px;
}
h2 {
  margin: 0;
  font-weight: 300;
}
h4 {
  font-weight: 300;
  color: #737272;
  text-align: center;
  padding-top: .5em;
}
h5 {
  color: #C9C9C9;
  text-align: center;
  font-weight: 300;
}
p {
  font-size: 1.2em;
  font-weight: 200;
  width: 80%;
  margin: auto;
  text-align: center;
}
.navbar-style {
  background-color: white;
  border: 0;
  /* border-bottom: 1px solid #3D3D3D; */
}

nav {

  .hamburger {
    border: 1px solid $font-color-primary;
  }
  .hamburger:hover {
    background-color: $font-color-primary;
    .hamburger-lines {
      border: 1px solid white;
    }
  }
  .hamburger-lines {
    border: 1px solid $font-color-primary;
  }
  .home-button {
    color: $font-color-primary;
  }
  .home-button:hover {
    font-weight: 500;
  }
  .main-buttons {

    a {
      color: $font-color-primary;
    }
    a:hover {
      font-weight: 500;
      text-decoration: none;
      background-color: #E3E3E3;
    }
    a:visited, a:focus {
      font-weight: 500;
      text-decoration: none;
    }
  }
}
#landing-page {
  @extend .clearfix;
  clear: both;
  min-height: 100%;
  width: 95%;
  margin: auto;
  padding: 250px 0;

  figure {
    text-align: center;

    a {
      display: inline-block;
      height: 4.25em;
      width: 4.25em;
      text-align: center;
      border-radius: 50px;

      i {
        padding-top: 2.5px;
        color: $font-color-primary;
      }
    }
    a:hover {
      background-color: #E3E3E3;
    }
  }
}
#portfolio {
  min-height: 100%;
  background-color: $portfolio-background-color;
  padding: 75px 0;

  figure {
    text-align: center;
  }
  .project {
    padding-top: 75px;

    .listing {
      padding: .5em .5em 2.5em .5em;

      article {
        background-color: white;
        padding: .5em .5em;
        -moz-box-shadow:    2px 2px 3px 0 darkgray;
        -webkit-box-shadow: 2px 2px 3px 0 darkgray;
        box-shadow:         2px 2px 3px 0 darkgray;

        img {
          width: 100%;
          height: auto;
          border: 1px solid lightgray;
        }
        h4 {
          margin-top: 0;
          padding: .75em 0 0 .5em;
          text-align: left;
        }
      }
      article:hover {
        cursor: pointer;
      }
    }
  }
}
#posts {
  min-height: 100%;
  background-color: $posts-background-color;
  padding: 75px 0;

  figure {
    text-align: center;
    padding-bottom: 75px;
  }
  .blog-post {
    width: 65%;
    margin: auto;
    background-color: white;
    border-radius: 4px;
    padding: 25px 2em;

    h2 {
      font-family: serif;
      font-weight: 300;
      font-size: 2.5em;
      cursor: pointer;
    }
    h2:hover {
      font-size: 3em;
    }
    small {
      color: #5D6477;
      font-size: 1em;
      font-weight: 200;
    }
    .blog-excerpt {
      display: none;
      text-align: left;
      margin: 0;
      padding-top: .5em;
      font-family: serif;
    }
    .show {
      display: block;
    }
  }
}
#about {
  min-height: 100px;
  padding: 75px 0;

  figure {
    text-align: center;
    padding-bottom: 75px;
  }

  aside {

    img {
      border-radius: 2.5px;
      width: 100%;
      height: auto;
    }
    article {

      p {
        text-align: left;
        width: 100%;
      }
      a, a:visited, a:focus {
        color: #737272;
        display: block;
        padding-top: 1em;
        text-decoration: none;

        i {
          vertical-align: middle;
        }
      }
      a:hover {
        color: $font-color-primary;
        text-decoration: none;
      }
    }
  }
}
#contact {
  min-height: 100px;
  background-color: $contact-background-color;
  padding: 25px 0;

  h2 {
    color: #B2B2B2;
    text-align: center;
  }
  figure {
    text-align: center;
    padding: 25px 0;

    i {
      color: #B2B2B2;
      margin: 0 .25em;
    }
    i:hover, i:visited, i:focus {
      color: white;
    }
  }
  p {
    font-size: 1em;
    color: #B2B2B2;
    padding-top: 25px;
  }
}
.modal-body {
  background-color: $posts-background-color;

  figure {
    text-align: center;
    padding-bottom: 1em;

    img {
      width: 90%;
      height: auto;
      border: 1px solid lightgray;
    }
  }
  p {
    text-align: left;
    width: 90%;
  }
  .tech-stack {
    text-align: left;
    padding: .5em 1.5em;
    margin-bottom: 0;
  }
  .ts-items {
    list-style-type: none;
    padding-left: 2.25em;
    text-align: left;
    margin: auto;
  }
  i {
    padding-right: .5em;
  }
}
.modal-footer {

  button {
    border-radius: 2.5px;
    border: none;
    background-color: $posts-background-color;
    color: $font-color-primary;
  }
  button:hover, button:focus, button:visited {
    background-color: #E3E3E3;
    color: $font-color-primary;
  }
}

